--- a/template.csproj
+++ b/template.csproj
@@ -66,7 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="game.cs" />
+    <Compile Include="Camera.cs" />
+    <Compile Include="Raytracer.cs" />
+    <Compile Include="Scene.cs" />
     <Compile Include="surface.cs" />
     <Compile Include="template.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
